# cosmICweb-music

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml
cosmicweb_music/: cosmICweb.py  data_types.py
tests/: test_config.py  test_e2e.py
