[tool.poetry]
name = "cosmicweb-music"
version = "0.1.0"
description = ""
authors = ["Michael Buehlmann <buehlmann.michi@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
cosmicweb-music = "cosmicweb_music.cosmICweb:cli"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
