[tool.poetry]
name = "cosmicweb-music"
version = "0.1.0"
description = "Script to download initial conditions for zoom-in cosmological simulations from the cosmICweb service."
authors = ["Michael Buehlmann <buehlmann.michi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/michaelbuehlmann/cosmicweb-music"
repository = "https://github.com/michaelbuehlmann/cosmicweb-music"
documentation = "https://github.com/michaelbuehlmann/cosmicweb-music"
include = ["LICENSE"]
keywords = ["scientific computing"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

[tool.poetry.scripts]
cosmicweb-music = "cosmicweb_music.cosmICweb:cli"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '\.git|\.venv|build|_build|dist'
