[tool.poetry]
version = "0.3.0"
name = "cosmicweb-music"
description = "Script to download initial conditions for zoom-in cosmological simulations from the cosmICweb service."
authors = [
    "Michael Buehlmann <buehlmann.michi@gmail.com>",
    "Lukas Winkler <python@lw1.at>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cosmo-sims/cosmicweb-music"
repository = "https://github.com/cosmo-sims/cosmicweb-music"
documentation = "https://github.com/cosmo-sims/cosmicweb-music"
include = ["LICENSE"]
keywords = ["scientific computing"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

[tool.bumpversion]
current_version = "0.3.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "[tool.poetry]\nversion = \"{current_version}\""
replace = "[tool.poetry]\nversion = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "cosmicweb_music/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[tool.poetry.scripts]
cosmicweb-music = "cosmicweb_music.cosmICweb:cli"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
bump-my-version = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '\.git|\.venv|build|_build|dist'
